# simple_fmri_tools

./: CMakeLists.txt  README.md
cmake-modules/: DebianPackageAddons.cmake  FindFFTW3F.cmake
src/: CMakeLists.txt  temporal_filter.pl  time_correlate.cpp  time_correlate.pl  time_fft.cpp
